Styled away admin controls - visible interations - when custom admin controls are set to closed. Increased container max-width slightly. Fixed padding issues with hero.

--- a/src/css/_custom_variables.scss
+++ b/src/css/_custom_variables.scss
@@ -130,7 +130,8 @@ $font-weight-ultralight: 	100;
 // Padding and sizes
 // -------------------------
 
-$container-max-width: 1200px;
+//$container-max-width: 1200px;
+$container-max-width: 1220px;
 
 $default-border-radius:		3px; //Compass named default variable.
 
