--- a/src/css/partials/molecules/_hero-carousel.scss
+++ b/src/css/partials/molecules/_hero-carousel.scss
@@ -15,8 +15,9 @@
     }
 
     .portlet-content {
-      padding-bottom: 0;
-      padding-top: 0;
+      //padding-bottom: 0;
+      //padding-top: 0;
+      padding: 0;
       .portlet-body {
         padding-bottom: 0;
         padding-top: 0;
